--- a/styles/style.css
+++ b/styles/style.css
@@ -11,10 +11,10 @@
     box-sizing: border-box;
 }
 
- h1 {
+h1 {
     font-weight: bolder;
     color: #575652;
- }
+}
 
 body {
     font-family: 'Poppins';
@@ -25,9 +25,12 @@ body {
 
 }
 
+li,
 a {
-    font-weight: bolder;
     color: rgb(53, 51, 44);
+    list-style: none;
+    text-decoration: none;
+    text-align: center;
 }
 
 li:hover,
@@ -38,6 +41,9 @@ a:hover {
     text-align: center;
 }
 
+span {
+    font-style: italic;
+}
 
 li:hover {
     width: 20%;
@@ -45,7 +51,17 @@ li:hover {
     background-color: #b4ac346e;
 }
 
+.navAtras a {
+    color: rgba(141, 140, 136, 0.616);
+}
 
+.navAtras:hover {
+    background-color: #ffffff;
+}
+
+.navAtras:hover a {
+    color: #b136266e;
+}
 
 .container_contenido {
     padding: 3em 2.8em;
@@ -57,6 +73,7 @@ li:hover {
 h3 {
     font-size: medium;
 }
+
 /* BOTONES PERSONALIZACION*/
 button,
 label {
@@ -74,7 +91,7 @@ label {
     background-color: #bace4d;
 }
 
-.boton:hover  {
+.boton:hover {
     background-color: #adeb74 !important;
 }
 
@@ -95,8 +112,4 @@ h5 {
 .formulario {
     padding-top: 5rem;
     height: 20rem;
-}
-
-.navAtras {
-    background-color: #c2806c;
 }
